--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,13 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/.idea
+
+#snapshots
+**/__image_snapshopts__
+
+# jest config json
+jest.config.json
+
+/.env
