--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "concurrently": "^7.3.0",
+    "i18next": "^21.9.1",
+    "i18next-browser-languagedetector": "^6.1.5",
+    "i18next-http-backend": "^1.4.1",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.5",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
