--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,7 @@
       }
     ],
     "linebreak-style": 0,
-    "max-len": "warn",
+    "max-len": "off",
     "react-hooks/exhaustive-deps": 0,
     "react/react-in-jsx-scope": "off",
     "react/jsx-uses-react": "error",
